entry routes working
