# routes/entriesRoute.js
@@ -7,6 +7,10 @@ const entriesController = require('../controllers/entriesController')
 
 router.get('/', entriesController.getAllEntries);
 
+router.get('/search/:query', entriesController.getEntriesByJournalId);
+
+router.get('/search/:query', entriesController.getEntriesByDate);
+
 router.get('/:id', entriesController.getOneEntry);
 
 router.post('/', entriesController.addEntry);
